compiler-core/src/parse/snapshots/rakun_core__parse__tests__type_invalid_type_name.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 1042
expression: "\nrecord A<a, type> {\n    A\n}\n"
---
error: Syntax error
  ┌─ /src/parse/error.rakun:2:13
  │
2 │ record A<a, type> {
  │             ^^^^ I was not expecting this

Found the keyword `type`, expected one of: 
- `>`
- a name
